Fixed dialog long line wrapping in IE

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 
 fieldset legend {
 	margin-bottom: 7px;
+	display: table; /* Enable line wrapping in IE */
 }
 
 .formInstruction{
